# Kingswalk-SCADA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  SPEC_FEEDBACK.md  docker-compose.yml  doppler.yaml  vercel.json
api/: pyproject.toml
api/app/: main.py
api/app/core/: config.py  cookies.py  email.py  encryption.py  exceptions.py  logging.py  rbac.py  redis_client.py  security.py  totp.py
api/app/db/: engine.py  models.py
api/app/repos/: asset_repo.py  event_repo.py  invite_repo.py  mfa_repo.py  password_reset_repo.py  telemetry_repo.py  user_repo.py
api/app/routes/: admin.py  assets.py  auth.py  events.py  health.py  ingest.py  mfa.py  telemetry.py  ws.py
api/app/services/: auth_service.py  comms_service.py  ingest_service.py  invite_service.py  mfa_service.py  notification_service.py  password_reset_service.py  threshold_service.py  watchdog_service.py  ws_manager.py
api/app/ws/: __init__.py  manager.py  router.py  state.py
api/tests/: conftest.py  test_admin_invite.py  test_assets.py  test_auth.py  test_db.py  test_email.py  test_encryption.py  test_health.py  test_ingest.py  test_invite_repo.py  test_login_lockout.py  test_mfa.py  test_mfa_repo.py  test_notification_service.py  test_onboard.py  test_password_reset.py  test_security.py  test_telemetry.py  test_threshold_service.py  test_totp.py  test_watchdog.py  test_websocket.py  test_ws.py
edge/: README.md  buffer.py  edge.env.demo  edge.env.example  main.py  modbus_client.py  poller.py  pyproject.toml  simulator.py  sync.py
edge/service/: kingswalk-edge.service
edge/tests/: test_buffer.py  test_modbus_client.py  test_poller.py  test_simulator.py  test_sync.py
spec/: ARCHITECTURE_REVIEW.md  ASSUMPTION_MAP.md  BUILD_HANDOFF.md  BUILD_STRATEGY.md  COMPETITIVE_ANALYSIS.md  DB_SCHEMA.md  FRONTEND_FRAMEWORK_DECISION.md  PLATFORM_DESIGN.md  PRE_MORTEM_ANALYSIS.md  SCHEMA_AUDIT_FINAL.md  SCHEMA_REVIEW.md  SECURITY_AUDIT_PREBUILD.md  SKILLS.md  SPEC.md  SPEC_GAP_ANALYSIS.md  SPRINT_0_TRACKER.md  TECHNOLOGY_ASSESSMENT.md
web/: .env.development  .eslintrc.cjs  index.html  (+5 more)
(+39 files in other folders)
