[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingswalk-scada-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.8.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "email-validator>=2.0.0",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "fakeredis[aioredis]>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
