[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingswalk-edge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymodbus>=3.7.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "structlog>=24.0.0",
    "sdnotify>=0.3.0",
]

[project.scripts]
kingswalk-simulator = "edge.simulator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.hatch.build.targets.wheel]
packages = ["edge"]
